@@ -82,3 +82,6 @@ TODO: подумать о переделке DataHolder/Tensor/tensormath  в А
 * добавлено распределение Бернулли в Tensor;
 * добавлено поэлементное перемножение тензоров Tensor::prod();
 * добавлена рассылка событий по сети, для управления отдельными слоями и компонентами;
+
+* добавлен метод Tensor::prodapp();
+* обновлен код Gain переходом на Tensor::prod() и prodapp();
